--- a/desafios/desafio05/style.css
+++ b/desafios/desafio05/style.css
@@ -19,21 +19,39 @@
     --cor02: #e53939;
     --cor03: #ffffff;
 
-    --font-principal: 'Ido'
+
 }
 body {
-    align-items: center;
-    justify-content:center ;
+    /* justify-content:center ; */
+    background-color: var(--cor01);
+}
+
+header {
+    color: var(--cor03);
+    padding-bottom: 20px;
+    text-indent: 10px;
+}
+
+header > h2 {
+    text-indent: 30px;
 }
 main{
-    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 300px;
+    max-width: 1000px;
     margin: auto;
+    padding-top: 10px;
+    /* justify-content: center;
+    align-items: center; */
 }
 .quem-sou {
-    /* width: 500px;
-    height: 600px; */
-    background-color:rgba(128, 128, 128, 0.26);
-    border: 2px solid red;
+    width: 500px;
+    height: 500px;
+    background-color:var(--cor03);
+    border-radius: 10px;
+    box-shadow: #373636 1px 3px 6px 1px;
     display: flex;
     flex-direction: column;
     /* align-items: center;
@@ -41,23 +59,79 @@ main{
 }
 .perfil {
     margin: auto;
-    border-radius: 100px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border-radius: 100%;
     align-items: center;
     width: 200px;
     height: 200px;
     padding-top: 5px;
-    padding-left: 20px;
 }
 article > p {
     text-align: center;
     padding: 10px;
+    padding-top: 0;
     margin: auto;
 }
-
-aside {
+.containers{
+    width: 550px;
+    display: flex;
+    gap: 10px;
     padding-top: 10px;
-    background-color:rgba(128, 128, 128, 0.26);
-    border: 2px solid blue;
+    
+    
+}
+.contato {
+    padding: 25px;
+    padding-top: 10px;
+    background-color: var(--cor03);
+    border-radius: 10px;
     width: 500px;
-    height: 500px;
+    height: 300px;
+    box-shadow: #373636 1px 3px 6px 1px;
+}
+.contato > h2 {
+    padding-bottom: 10px;
+}
+.redes {
+    padding-bottom: 15px;
+}
+.contato:hover{
+    width: 600px;
+    transition: 0.5s;
+
+}
+.projetos {
+    padding: 25px;
+    padding-top: 10px;
+    background-color:var(--cor03);
+    border-radius: 10px;
+    box-shadow: #373636 1px 3px 6px 1px;
+    width: 500px;
+    height: 300px;
+}
+.projetos > h2 {
+    padding-bottom: 10px;
+}
+.projetos:hover{
+    width: 600px;
+    transition: 1s;
+}
+a {
+    text-decoration: none;
+    color: var(--cor02);
+}
+a:hover{
+    text-decoration: underline;
+    color: var(--cor01);
+    font-weight: bold;
+}
+strong{
+    color: var(--cor02);
+    font-weight: bold;
+}
+footer {
+    text-align: center;
+    margin-top: 20px;
+    color: var(--cor03);
 }
